TestCases/Errors/Haversine/observations/sst/aut_08_obs.spm
obs r16-c6 0.000882148650136912
obs r17-c6 0.000542979531561825
obs r15-c7 0.000332137110433604
obs r16-c7 0.000487051178107147
obs r7-c13 0.00169590643274854
obs r6-c14 0.00134259259259259
obs r8-c14 0.00494533461629642
obs r9-c14 0.00517368810051737
obs r6-c15 0.00810185185185185
obs r6-c16 0.00525083612040134
obs r7-c16 0.00615384615384615
obs r7-c17 1e-08
obs r11-c19 0.0197101449275362
obs r8-c20 1e-08
obs r4-c21 0.000151515151515152
obs r5-c21 1e-08
obs r4-c22 0.000909090909090909
error_value r16-c6 0.2
error_value r17-c6 0.2
error_value r15-c7 0.2
error_value r16-c7 0.2
error_value r7-c13 0.2
error_value r6-c14 0.2
error_value r8-c14 0.2
error_value r9-c14 0.2
error_value r6-c15 0.2
error_value r6-c16 0.2
error_value r7-c16 0.2
error_value r7-c17 0.2
error_value r11-c19 0.2
error_value r8-c20 0.2
error_value r4-c21 0.2
error_value r5-c21 0.2
error_value r4-c22 0.2
